--- a/src/app/pricing-details/pricing-details.component.html
+++ b/src/app/pricing-details/pricing-details.component.html
@@ -140,8 +140,8 @@
                 <div class="jp_pricing_cont_wrapper">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus auctor lacinia pellentesque. Vivamus et tellus in urna faucibus porttitor. Sed auctor ut nunc in pulvinar. Fusce lacinia, velit vitae pharetra porttitor, nunc libero
                         itdin odio, quis iaculis tortor ligula feugiat ex. Nam ut cursus mi. Nullam eu erat in justo euismod ultrices ut id enim. Mrbi non tempor ante, eget molestie mauris. Cras gravida, lacus nec sollicitn euismod, ipsum nisl tempor
-                        leo, in volutat sapien ex ac erat. In sit amet dolor ut erat fermentum tincidut. Maecenas sd pque ex.<br><br>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem
-                        quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
+                        leo, in volutat sapien ex ac erat. In sit amet dolor ut erat fermentum tincidut. Maecenas sd pque ex.<br><br>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis
+                        bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris.</p>
                 </div>
                 <div class="jp_pricing_form_wrapper">
                     <div class="row">
@@ -186,7 +186,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 hidden-sm hidden-xs">
                 <div class="jp_down_mob_img_wrapper">
-                    <img src="/assets/images/content/mobail.png" alt="mobail_img" />
+                    <img src="assets/images/content/mobail.png" alt="mobail_img" />
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -199,7 +199,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 visible-sm visible-xs">
                 <div class="jp_down_mob_img_wrapper">
-                    <img src="/assets/images/content/mobail.png" class="img-responsive" alt="mobail_img" />
+                    <img src="assets/images/content/mobail.png" class="img-responsive" alt="mobail_img" />
                 </div>
             </div>
         </div>
@@ -214,7 +214,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="jp_newsletter_text">
-                        <img src="/assets/images/content/news_logo.png" class="img-responsive" alt="news_logo" />
+                        <img src="assets/images/content/news_logo.png" class="img-responsive" alt="news_logo" />
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -233,7 +233,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="jp_footer_logo_wrapper">
                         <div class="jp_footer_logo">
-                            <a href="#"><img src="/assets/images/content/resume_logo.png" alt="footer_logo"/></a>
+                            <a href="#"><img src="assets/images/content/resume_logo.png" alt="footer_logo" /></a>
                         </div>
                     </div>
                 </div>
@@ -329,26 +329,27 @@
     </div>
 </div>
 <!-- jp footer Wrapper End -->
- <!-- chat box Wrapper start -->
-<div id="chat-circle" class="btn btn-raised"> 
+<!-- chat box Wrapper start -->
+<div id="chat-circle" class="btn btn-raised">
     <i class="fa fa-envelope"></i>
 </div>
 <div class="chat-box">
-  <div class="chat-box-header">
-    ChatBot
-    <span class="chat-box-toggle"><i class="fa fa-times"></i></span>
- </div>
-<div class="chat-box-body">
-  <div class="chat-box-overlay">   
-  </div>
-   <div class="chat-logs">
-   
-   </div><!--chat-log -->
- </div>
- <div class="chat-input">      
-  <form>
-    <input type="text" id="chat-input" placeholder="Send a message..."/>
-   <button type="submit" class="chat-submit" id="chat-submit"><i class="fa fa-paper-plane" ></i></button>
-   </form>      
-  </div>
+    <div class="chat-box-header">
+        ChatBot
+        <span class="chat-box-toggle"><i class="fa fa-times"></i></span>
+    </div>
+    <div class="chat-box-body">
+        <div class="chat-box-overlay">
+        </div>
+        <div class="chat-logs">
+
+        </div>
+        <!--chat-log -->
+    </div>
+    <div class="chat-input">
+        <form>
+            <input type="text" id="chat-input" placeholder="Send a message..." />
+            <button type="submit" class="chat-submit" id="chat-submit"><i class="fa fa-paper-plane" ></i></button>
+        </form>
+    </div>
 </div>
