--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -31,7 +31,8 @@
                     <div class="section_heading section_2_heading">
                         <h2>how we <span>do it ?</span></h2>
                     </div>
-                    <p>Proin gravida nibh vel velit auctor aliquet. aks Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem.consequat ipsum, nec sagittis sem nibh id elit.Donec vestibulum justo a diam ultricies. pel lentesque. Quisque mattis diam vel.</p>
+                    <p>Proin gravida nibh vel velit auctor aliquet. aks Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem.consequat ipsum, nec sagittis sem nibh id elit.Donec vestibulum justo a diam ultricies. pel
+                        lentesque. Quisque mattis diam vel.</p>
                     <p>Lorem Ipsum has been the industry's standard dummy text ever sincer they 1500s, when an unknown printer took and galley of type and scrambled. nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                     <ul>
                         <li><i class="fa fa-check-square" aria-hidden="true"></i><a href="#">We sell all over the world.</a>
@@ -39,13 +40,13 @@
                         <li><i class="fa fa-check-square" aria-hidden="true"></i><a href="#">Satisfaction or money refund guaranteed.</a>
                         </li>
                         <li><i class="fa fa-check-square" aria-hidden="true"></i><a href="#">Lifetime updates & support.</a>
-                                </li>
+                        </li>
                     </ul>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
                 <div class="about_image_wrapper">
-                    <img class="img-responsive" src="/assets/images/content/register_bg.jpg" alt="about-img">
+                    <img class="img-responsive" src="assets/images/content/register_bg.jpg" alt="about-img">
                 </div>
             </div>
             <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
@@ -53,8 +54,11 @@
                     <div class="section_heading section_2_heading">
                         <h2>why we<span> do it ?</span></h2>
                     </div>
-                    <p>Proin gravida nibh vel velit auctor aliquet. aks Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem.consequat ipsum,rmentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit sum, nec sagittis sem.consequat ipsum,rmentum nunc. Etiam pharetra, mauris egestas quam, ut aliquam massa nisl quis neque. Suspendissenec sagittis sem.conse nec sagittis sem nibh id elit.Donec vesquat ipsum, nec sa tibulum justo a diam ultricies. pel lentesque. Quisque mattis diam vel.</p>
-                    <p>Lorem Ipsum has been the industry's standard dummy text ever sincer they 1500s, when an unknown printer took and galley onsequat ipsum, orbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad a diam ultricie of type and scrambled. nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                    <p>Proin gravida nibh vel velit auctor aliquet. aks Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem.consequat ipsum,rmentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit sum, nec
+                        sagittis sem.consequat ipsum,rmentum nunc. Etiam pharetra, mauris egestas quam, ut aliquam massa nisl quis neque. Suspendissenec sagittis sem.conse nec sagittis sem nibh id elit.Donec vesquat ipsum, nec sa tibulum justo a diam
+                        ultricies. pel lentesque. Quisque mattis diam vel.</p>
+                    <p>Lorem Ipsum has been the industry's standard dummy text ever sincer they 1500s, when an unknown printer took and galley onsequat ipsum, orbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris
+                        vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad a diam ultricie of type and scrambled. nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
                 </div>
             </div>
         </div>
@@ -155,7 +159,7 @@
                             <div class="item jp_recent_main">
                                 <div class="jp_career_main_box_wrapper">
                                     <div class="jp_career_img_wrapper">
-                                        <img src="/assets/images/content/car_img1.jpg" alt="career_img" />
+                                        <img src="assets/images/content/car_img1.jpg" alt="career_img" />
                                     </div>
                                     <div class="jp_career_cont_wrapper">
                                         <p><i class="fa fa-calendar"></i>&nbsp;&nbsp; <a href="#">20 OCT, 2017</a></p>
@@ -165,7 +169,7 @@
                                 </div>
                                 <div class="jp_career_slider_bottom_cont">
                                     <ul>
-                                        <li><img src="/assets/images/content/blog_small_img.jpg" alt="small_img" class="img-circle">&nbsp;&nbsp; <a href="#">Jhon Doe</a></li>
+                                        <li><img src="assets/images/content/blog_small_img.jpg" alt="small_img" class="img-circle">&nbsp;&nbsp; <a href="#">Jhon Doe</a></li>
                                     </ul>
                                     <p><a href="#"><i class="fa fa-comments"></i></a></p>
                                 </div>
@@ -173,7 +177,7 @@
                             <div class="item jp_recent_main">
                                 <div class="jp_career_main_box_wrapper">
                                     <div class="jp_career_img_wrapper">
-                                        <img src="/assets/images/content/car_img2.jpg" alt="career_img" />
+                                        <img src="assets/images/content/car_img2.jpg" alt="career_img" />
                                     </div>
                                     <div class="jp_career_cont_wrapper">
                                         <p><i class="fa fa-calendar"></i>&nbsp;&nbsp; <a href="#">20 OCT, 2017</a></p>
@@ -183,7 +187,7 @@
                                 </div>
                                 <div class="jp_career_slider_bottom_cont">
                                     <ul>
-                                        <li><img src="/assets/images/content/blog_small_img.jpg" alt="small_img" class="img-circle">&nbsp;&nbsp; <a href="#">Jhon Doe</a></li>
+                                        <li><img src="assets/images/content/blog_small_img.jpg" alt="small_img" class="img-circle">&nbsp;&nbsp; <a href="#">Jhon Doe</a></li>
                                     </ul>
                                     <p><a href="#"><i class="fa fa-comments"></i></a></p>
                                 </div>
@@ -191,7 +195,7 @@
                             <div class="item jp_recent_main">
                                 <div class="jp_career_main_box_wrapper">
                                     <div class="jp_career_img_wrapper">
-                                        <img src="/assets/images/content/car_img3.jpg" alt="career_img" />
+                                        <img src="assets/images/content/car_img3.jpg" alt="career_img" />
                                     </div>
                                     <div class="jp_career_cont_wrapper">
                                         <p><i class="fa fa-calendar"></i>&nbsp;&nbsp; <a href="#">20 OCT, 2017</a></p>
@@ -201,7 +205,7 @@
                                 </div>
                                 <div class="jp_career_slider_bottom_cont">
                                     <ul>
-                                        <li><img src="/assets/images/content/blog_small_img.jpg" alt="small_img" class="img-circle">&nbsp;&nbsp; <a href="#">Jhon Doe</a></li>
+                                        <li><img src="assets/images/content/blog_small_img.jpg" alt="small_img" class="img-circle">&nbsp;&nbsp; <a href="#">Jhon Doe</a></li>
                                     </ul>
                                     <p><a href="#"><i class="fa fa-comments"></i></a></p>
                                 </div>
@@ -249,7 +253,8 @@
             <div class="col-lg-6 col-md-6 col-xs-12 col-sm-12">
                 <div class="aboutus_text_section abt_txt_page_2">
                     <h2>Who We <span>Are</span></h2>
-                    <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. iat nulla pariatur. Excepteur sint occaecat cupidatat non proluptate velit esse cillum dolore euur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. iat nulla pariatur. Excepteur sint occaecat cupidatat non proluptate velit esse cillum dolore euur. Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <div class="row">
                         <div class="col-md-6">
                             <ul>
@@ -334,7 +339,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 hidden-sm hidden-xs">
                 <div class="jp_down_mob_img_wrapper">
-                    <img src="/assets/images/content/mobail.png" alt="mobail_img" />
+                    <img src="assets/images/content/mobail.png" alt="mobail_img" />
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -347,7 +352,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 visible-sm visible-xs">
                 <div class="jp_down_mob_img_wrapper">
-                    <img src="/assets/images/content/mobail.png" class="img-responsive" alt="mobail_img" />
+                    <img src="assets/images/content/mobail.png" class="img-responsive" alt="mobail_img" />
                 </div>
             </div>
         </div>
@@ -362,7 +367,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="jp_newsletter_text">
-                        <img src="/assets/images/content/news_logo.png" class="img-responsive" alt="news_logo" />
+                        <img src="assets/images/content/news_logo.png" class="img-responsive" alt="news_logo" />
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -381,7 +386,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="jp_footer_logo_wrapper">
                         <div class="jp_footer_logo">
-                            <a href="#"><img src="/assets/images/content/resume_logo.png" alt="footer_logo"/></a>
+                            <a href="#"><img src="assets/images/content/resume_logo.png" alt="footer_logo" /></a>
                         </div>
                     </div>
                 </div>
