--- a/src/app/client-review/client-review.component.html
+++ b/src/app/client-review/client-review.component.html
@@ -119,7 +119,7 @@
                         <div class="col-lg-3 col-md-4 col-xs-4 review-part-left">
                             <div class="row">
                                 <div class="col-md-5 col-sm-4 col-xs-5">
-                                    <img src="/assets/images/content/resume_img1.jpg" alt="img">
+                                    <img src="assets/images/content/resume_img1.jpg" alt="img">
                                 </div>
                                 <div class="col-md-6 col-sm-8 col-xs-7 client_reivew_img">
                                     <p>8 days ago</p>
@@ -150,7 +150,7 @@
                         <div class="col-lg-3 col-md-4 col-xs-4 review-part-left">
                             <div class="row">
                                 <div class="col-md-5 col-sm-4 col-xs-5">
-                                    <img src="/assets/images/content/resume_img2.jpg" alt="img">
+                                    <img src="assets/images/content/resume_img2.jpg" alt="img">
                                 </div>
                                 <div class="col-md-6 col-sm-8 col-xs-7 client_reivew_img">
                                     <p>2 days ago</p>
@@ -181,7 +181,7 @@
                         <div class="col-lg-3 col-md-4 col-xs-4 review-part-left">
                             <div class="row">
                                 <div class="col-md-5 col-sm-4 col-xs-5">
-                                    <img src="/assets/images/content/resume_img3.jpg" alt="img">
+                                    <img src="assets/images/content/resume_img3.jpg" alt="img">
                                 </div>
                                 <div class="col-md-5 col-sm-8 col-xs-7 client_reivew_img">
                                     <p>12 days ago</p>
@@ -212,8 +212,8 @@
                         <div class="col-lg-3 col-md-4 col-xs-4 review-part-left">
                             <div class="row">
                                 <div class="col-md-5 col-sm-4 col-xs-5">
-                                    <img src="/assets/images/content/resume_img4.jpg" alt="img">
-                                </div> 
+                                    <img src="assets/images/content/resume_img4.jpg" alt="img">
+                                </div>
                                 <div class="col-md-7 col-sm-8 col-xs-7 client_reivew_img">
                                     <p>15 days ago</p>
                                     <span><a href="#">Saniya Neo</a></span>
@@ -243,7 +243,7 @@
                         <div class="col-lg-3 col-md-4 col-xs-4 review-part-left">
                             <div class="row">
                                 <div class="col-md-5 col-sm-4 col-xs-5">
-                                    <img src="/assets/images/content/resume_img5.jpg" alt="img">
+                                    <img src="assets/images/content/resume_img5.jpg" alt="img">
                                 </div>
                                 <div class="col-md-7 col-sm-8 col-xs-7 client_reivew_img">
                                     <p>5 month ago</p>
@@ -273,7 +273,7 @@
                         <div class="col-lg-3 col-md-4 col-xs-4 review-part-left">
                             <div class="row">
                                 <div class="col-md-5 col-sm-4 col-xs-5">
-                                    <img src="/assets/images/content/resume_img2.jpg" alt="img">
+                                    <img src="assets/images/content/resume_img2.jpg" alt="img">
                                 </div>
                                 <div class="col-md-7 col-sm-8 col-xs-7 client_reivew_img">
                                     <p>2 month ago</p>
@@ -303,7 +303,7 @@
                         <div class="col-lg-3 col-md-4 col-xs-4 review-part-left">
                             <div class="row">
                                 <div class="col-md-5 col-sm-4 col-xs-5">
-                                    <img src="/assets/images/content/resume_img6.jpg" alt="img">
+                                    <img src="assets/images/content/resume_img6.jpg" alt="img">
                                 </div>
                                 <div class="col-md-7 col-sm-8 col-xs-7 client_reivew_img">
                                     <p>8 month ago</p>
@@ -344,7 +344,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                     <div class="jp_newsletter_text">
-                        <img src="/assets/images/content/news_logo.png" class="img-responsive" alt="news_logo" />
+                        <img src="assets/images/content/news_logo.png" class="img-responsive" alt="news_logo" />
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -365,7 +365,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="jp_footer_logo_wrapper">
                         <div class="jp_footer_logo">
-                            <a href="#"><img src="/assets/images/content/resume_logo.png" alt="footer_logo" /></a>
+                            <a href="#"><img src="assets/images/content/resume_logo.png" alt="footer_logo" /></a>
                         </div>
                     </div>
                 </div>
@@ -463,26 +463,27 @@
     </div>
 </div>
 <!-- jp footer Wrapper End -->
- <!-- chat box Wrapper start -->
-<div id="chat-circle" class="btn btn-raised"> 
+<!-- chat box Wrapper start -->
+<div id="chat-circle" class="btn btn-raised">
     <i class="fa fa-envelope"></i>
 </div>
 <div class="chat-box">
-  <div class="chat-box-header">
-    ChatBot
-    <span class="chat-box-toggle"><i class="fa fa-times"></i></span>
- </div>
-<div class="chat-box-body">
-  <div class="chat-box-overlay">   
-  </div>
-   <div class="chat-logs">
-   
-   </div><!--chat-log -->
- </div>
- <div class="chat-input">      
-  <form>
-    <input type="text" id="chat-input" placeholder="Send a message..."/>
-   <button type="submit" class="chat-submit" id="chat-submit"><i class="fa fa-paper-plane" ></i></button>
-   </form>      
-  </div>
+    <div class="chat-box-header">
+        ChatBot
+        <span class="chat-box-toggle"><i class="fa fa-times"></i></span>
+    </div>
+    <div class="chat-box-body">
+        <div class="chat-box-overlay">
+        </div>
+        <div class="chat-logs">
+
+        </div>
+        <!--chat-log -->
+    </div>
+    <div class="chat-input">
+        <form>
+            <input type="text" id="chat-input" placeholder="Send a message..." />
+            <button type="submit" class="chat-submit" id="chat-submit"><i class="fa fa-paper-plane" ></i></button>
+        </form>
+    </div>
 </div>
