--- a/src/app/common-header/common-header.component.html
+++ b/src/app/common-header/common-header.component.html
@@ -19,8 +19,8 @@
                     </div>
                     <div class="jp_top_header_right__social_cont">
                         <ul>
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.facebook.com/vinodbalakumar/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/vinodbalakumar"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="#"><i class="fa fa-pinterest-p"></i></a></li>
                             <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
@@ -40,7 +40,7 @@
                 <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12 hidden-xs hidden-sm full_width">
                     <div class="gc_header_wrapper">
                         <div class="gc_logo">
-                            <a roterLink="/header/home"><img src="assets/images/header/logo2.png" alt="Logo" title="Job Pro" class="img-responsive"></a>
+                            <a roterLink="/header/home"><img src="/assets/images/header/logo2.png" alt="Logo" title="Job Pro" class="img-responsive"></a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
 
                                     <!-- sub menu end -->
                                 </li>
-                                <li class="has-mega gc_main_navigation"><a href="#" class="gc_main_navigation">  PRODUCT&nbsp;<i class="fa fa-angle-down"></i></a>
+                                <li class="has-mega gc_main_navigation"><a href="#" class="gc_main_navigation">  Product &nbsp;<i class="fa fa-angle-down"></i></a>
                                     <!-- mega menu start -->
                                     <ul>
                                         <li class="parent"><a routerLink="/header/about">About-Us</a></li>
@@ -103,7 +103,7 @@
                                 <div class="row">
                                     <div class="col-xs-6 col-sm-6">
                                         <div class="gc_logo">
-                                            <a href="index.html"><img src="assets/images/header/logo2.png" alt="Logo" title="Grace Church"></a>
+                                            <a href="index.html"><img src="/assets/images/header/logo2.png" alt="Logo" title="Grace Church"></a>
                                         </div>
                                     </div>
                                     <div class="col-xs-6 col-sm-6">
@@ -112,7 +112,7 @@
                                                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 31.177 31.177" style="enable-background:new 0 0 31.177 31.177;" xml:space="preserve" width="25px" height="25px"><g><g><path class="menubar" d="M30.23,1.775H0.946c-0.489,0-0.887-0.398-0.887-0.888S0.457,0,0.946,0H30.23    c0.49,0,0.888,0.398,0.888,0.888S30.72,1.775,30.23,1.775z" fill="#000000"/></g><g><path class="menubar" d="M30.23,9.126H12.069c-0.49,0-0.888-0.398-0.888-0.888c0-0.49,0.398-0.888,0.888-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,8.729,30.72,9.126,30.23,9.126z" fill="#000000"/></g><g><path class="menubar" d="M30.23,16.477H0.946c-0.489,0-0.887-0.398-0.887-0.888c0-0.49,0.398-0.888,0.887-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,16.079,30.72,16.477,30.23,16.477z" fill="#000000"/></g><g><path class="menubar" d="M30.23,23.826H12.069c-0.49,0-0.888-0.396-0.888-0.887c0-0.49,0.398-0.888,0.888-0.888H30.23    c0.49,0,0.888,0.397,0.888,0.888C31.118,23.43,30.72,23.826,30.23,23.826z" fill="#000000"/></g><g><path class="menubar" d="M30.23,31.177H0.946c-0.489,0-0.887-0.396-0.887-0.887c0-0.49,0.398-0.888,0.887-0.888H30.23    c0.49,0,0.888,0.398,0.888,0.888C31.118,30.78,30.72,31.177,30.23,31.177z" fill="#000000"/></g></g></svg>
                                             </a>
                                             <nav class="cd-dropdown">
-                                                <h2><a href="#">Job<span>Pro</span></a></h2>
+                                                <h2><a href="#">Vr<span>Global</span></a></h2>
                                                 <a href="#0" class="cd-close">Close</a>
                                                 <ul class="cd-dropdown-content">
                                                     <li>
@@ -120,83 +120,96 @@
                                                             <input type="search" placeholder="Search...">
                                                         </form>
                                                     </li>
-                                                    <li class="has-children">
+                                                    <li>
+                                                        <a href="/header/home">Home</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="/header/job-listing">Jobs Listing</a>
+                                                    </li>
+
+                                                    <li>
+                                                        <a href="/header/company-listing">Company Listing</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="/header/candidates-listing">candidates Listing</a>
+                                                    </li>
+
+                                                    <!-- <li class="has-children">
                                                         <a href="#">Home</a>
 
                                                         <ul class="cd-secondary-dropdown is-hidden">
                                                             <li class="go-back"><a href="#0">Menu</a></li>
-                                                            <li><a href="index.html">Home1</a></li>
-                                                            <li><a href="index_II.html">Home2</a></li>
+                                                            <li><a href="/header/home">Home</a></li>
+                                                             <li><a href="index_II.html">Home2</a></li>
                                                             <li><a href="index_map.html">Home3</a></li>
                                                             <li><a href="index_iv.html">Home4</a></li>
                                                             <li><a href="index_v.html">Home5</a></li>
-                                                            <li><a href="index_vi.html">Home6</a></li>
-                                                            <!-- .has-children -->
+                                                            <li><a href="index_vi.html">Home6</a></li>  
+                                                   
 
-                                                        </ul>
-                                                        <!-- .cd-secondary-dropdown -->
-                                                    </li>
-                                                    <!-- .has-children -->
+                                                </ul>
+                                                
+                                                </li> 
 
 
                                                     <li class="has-children">
-                                                        <a href="#">Listing</a>
+                                                        <a href="#">Jobs Listing</a>
 
                                                         <ul class="cd-secondary-dropdown is-hidden">
                                                             <li class="go-back"><a href="#0">Menu</a></li>
                                                             <li>
-                                                                <a href="listing_left.html">listing-Left</a>
+                                                                <a href="/header/job-listing">Jobs List</a>
                                                             </li>
-                                                            <!-- .has-children -->
+                                                          
 
                                                             <li>
                                                                 <a href="listing_right.html">listing-Right</a>
-                                                            </li>
-                                                            <!-- .has-children -->
+                                                            </li>   
+                                                          
 
                                                             <li>
                                                                 <a href="listing_single.html">listing-Single</a>
-                                                            </li>
-                                                            <!-- .has-children -->
+                                                            </li> 
+                                                         
 
                                                         </ul>
-                                                        <!-- .cd-secondary-dropdown -->
-                                                    </li>
-                                                    <!-- .has-children -->
+                                                       
+                                                    </li> 
+
                                                     <li class="has-children">
-                                                        <a href="#">candidates</a>
+                                                        <a href="#">candidates Listing</a>
 
                                                         <ul class="cd-secondary-dropdown is-hidden">
                                                             <li class="go-back"><a href="#0">Menu</a></li>
-                                                            <li><a href="company_listing.html">Company-Listing</a></li>
-                                                            <li><a href="company_listing_single.html">Company-Single</a></li>
+                                                            <li><a href="/header/company-listing">candidates Listing</a></li>
+                                                                <li><a href="company_listing_single.html">Company-Single</a></li>
                                                             <li><a href="candidate_listing.html">candidate-Listing</a></li>
-                                                            <li><a href="candidate_profile.html">candidate-Profile</a></li>
-                                                            <!-- .has-children -->
+                                                            <li><a href="candidate_profile.html">candidate-Profile</a></li>  
+                                                          
 
                                                         </ul>
-                                                        <!-- .cd-secondary-dropdown -->
-                                                    </li>
+                                                       
+                                                    </li>  -->
                                                     <li class="has-children">
-                                                        <a href="#">Pages</a>
+                                                        <a href="#">Product</a>
 
                                                         <ul class="cd-secondary-dropdown is-hidden">
                                                             <li class="go-back"><a href="#0">Menu</a></li>
-                                                            <li><a href="about.html">About-Us</a></li>
-                                                            <li><a href="404_error.html">404</a></li>
-                                                            <li><a href="add_postin.html">Add-Posting</a></li>
-                                                            <li><a href="login.html">Login</a></li>
-                                                            <li><a href="register.html">Register</a></li>
-                                                            <li><a href="pricing.html">Pricing</a></li>
-                                                            <li><a href="message.html">message</a></li>
-                                                            <li><a href="client_reivew.html">client reivew</a></li>
+                                                            <li><a href="/header/about">About-Us</a></li>
+                                                            <!-- <li><a href="404_error.html">404</a></li> -->
+                                                            <li><a href="/header/addPost">Add-Posting</a></li>
+                                                            <li><a href="/header/login">Login</a></li>
+                                                            <li><a href="/header/signup">Register</a></li>
+                                                            <li><a href="/header/pricing-details">Pricing</a></li>
+                                                            <!-- <li><a href="message.html">message</a></li> -->
+                                                            <li><a href="/header/client-review">client reivew</a></li>
                                                             <!-- .has-children -->
 
                                                         </ul>
                                                         <!-- .cd-secondary-dropdown -->
                                                     </li>
                                                     <!-- .has-children -->
-                                                    <li class="has-children">
+                                                    <!-- <li class="has-children">
                                                         <a href="#">Blog</a>
 
                                                         <ul class="cd-secondary-dropdown is-hidden">
@@ -204,36 +217,37 @@
                                                             <li>
                                                                 <a href="blog_left.html">Blog-Left</a>
                                                             </li>
-                                                            <!-- .has-children -->
+                                                           
 
-                                                            <li>
-                                                                <a href="blog_right.html">Blog-Right</a>
-                                                            </li>
-                                                            <!-- .has-children -->
-
-                                                            <li>
-                                                                <a href="blog_single_left.html">Blog-Single-Left</a>
-                                                            </li>
-                                                            <!-- .has-children -->
-
-                                                            <li>
-                                                                <a href="blog_single_right.html">Blog-Single-Left</a>
-                                                            </li>
-                                                            <!-- .has-children -->
-
-                                                        </ul>
-                                                        <!-- .cd-secondary-dropdown -->
+                                                    <li>
+                                                        <a href="blog_right.html">Blog-Right</a>
                                                     </li>
+                                                    
+
+                                                    <li>
+                                                        <a href="blog_single_left.html">Blog-Single-Left</a>
+                                                    </li>
+                                                
+
+                                                    <li>
+                                                        <a href="blog_single_right.html">Blog-Single-Left</a>
+                                                    </li>
+                                               
+
+                                                </ul>
+                                               
+                                                </li> -->
                                                     <!-- .has-children -->
                                                     <li>
                                                         <a href="contact.html">Contact</a>
                                                     </li>
                                                     <li>
-                                                        <a href="register.html">Sign Up</a>
+                                                        <a href="/header/signup">Sign Up</a>
                                                     </li>
                                                     <li>
-                                                        <a href="login.html">Login</a>
+                                                        <a href="/header/login">Login</a>
                                                     </li>
+
 
                                                 </ul>
                                                 <!-- .cd-dropdown-content -->
